--- a/SystemCommon/SystemCommon.csproj
+++ b/SystemCommon/SystemCommon.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\ProcessProperty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Config.cs" />
   </ItemGroup>
